; ModuleID = '/home/carl/AnghaBench/torch7/lib/luaT/extr_luaT.c_luaT_realloc.c'
source_filename = "/home/carl/AnghaBench/torch7/lib/luaT/extr_luaT.c_luaT_realloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [51 x i8] c"$ Torch: invalid memory size -- maybe an overflow?\00", align 1
@.str.1 = private unnamed_addr constant [71 x i8] c"$ Torch: not enough memory: you tried to reallocate %dGB. Buy new RAM!\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @luaT_realloc(i32* %0, i8* %1, i32 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  %8 = load i8*, i8** %6, align 8
  %9 = icmp ne i8* %8, null
  br i1 %9, label %14, label %10

10:                                               ; preds = %3
  %11 = load i32*, i32** %5, align 8
  %12 = load i32, i32* %7, align 4
  %13 = call i8* @luaT_alloc(i32* %11, i32 %12)
  store i8* %13, i8** %4, align 8
  br label %40

14:                                               ; preds = %3
  %15 = load i32, i32* %7, align 4
  %16 = icmp eq i32 %15, 0
  br i1 %16, label %17, label %21

17:                                               ; preds = %14
  %18 = load i32*, i32** %5, align 8
  %19 = load i8*, i8** %6, align 8
  %20 = call i32 @luaT_free(i32* %18, i8* %19)
  store i8* null, i8** %4, align 8
  br label %40

21:                                               ; preds = %14
  %22 = load i32, i32* %7, align 4
  %23 = icmp slt i32 %22, 0
  br i1 %23, label %24, label %27

24:                                               ; preds = %21
  %25 = load i32*, i32** %5, align 8
  %26 = call i32 (i32*, i8*, ...) @luaL_error(i32* %25, i8* getelementptr inbounds ([51 x i8], [51 x i8]* @.str, i64 0, i64 0))
  br label %27

27:                                               ; preds = %24, %21
  %28 = load i8*, i8** %6, align 8
  %29 = load i32, i32* %7, align 4
  %30 = call i8* @realloc(i8* %28, i32 %29)
  store i8* %30, i8** %6, align 8
  %31 = load i8*, i8** %6, align 8
  %32 = icmp ne i8* %31, null
  br i1 %32, label %38, label %33

33:                                               ; preds = %27
  %34 = load i32*, i32** %5, align 8
  %35 = load i32, i32* %7, align 4
  %36 = sdiv i32 %35, 1073741824
  %37 = call i32 (i32*, i8*, ...) @luaL_error(i32* %34, i8* getelementptr inbounds ([71 x i8], [71 x i8]* @.str.1, i64 0, i64 0), i32 %36)
  br label %38

38:                                               ; preds = %33, %27
  %39 = load i8*, i8** %6, align 8
  store i8* %39, i8** %4, align 8
  br label %40

40:                                               ; preds = %38, %17, %10
  %41 = load i8*, i8** %4, align 8
  ret i8* %41
}

declare dso_local i8* @luaT_alloc(i32*, i32) #1

declare dso_local i32 @luaT_free(i32*, i8*) #1

declare dso_local i32 @luaL_error(i32*, i8*, ...) #1

declare dso_local i8* @realloc(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
